sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:13: error: Unmatched closing brace '}' ignored here
		} while (inv= true)
                ^AlgBubbleSort2:14: error: Unmatched closing brace '}' ignored here
		}
                ^AlgBubbleSort2:24: error: illegal start of simple expression
}
^